<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteX="-116dp"
    tools:layout_editor_absoluteY="2dp">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saludo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.174"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.077" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="114dp"
        android:layout_height="33dp"
        android:background="@color/fondo2"
        android:text="@string/Condition2"
        android:textColor="@color/texto2"
        android:textSize="24sp"
        android:visibility="invisible"
        tools:layout_editor_absoluteX="281dp"
        tools:layout_editor_absoluteY="682dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/fondo1"
        android:text="@string/Condition1"
        android:textColor="@color/texto1"
        android:textSize="24sp"
        android:visibility="invisible"
        tools:layout_editor_absoluteX="145dp"
        tools:layout_editor_absoluteY="640dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/fondo4"
        android:text="@string/Condition4"
        android:textColor="@color/texto4"
        android:textSize="24sp"
        android:visibility="invisible"
        tools:layout_editor_absoluteX="147dp"
        tools:layout_editor_absoluteY="682dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/fondo3"
        android:text="@string/Condition3"
        android:textColor="@color/texto3"
        android:textSize="24sp"
        android:visibility="invisible"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="640dp" />

    <Button
        android:id="@+id/btn_ciclo_vida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:text="Ciclo de vida"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.586" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Button"
        tools:layout_editor_absoluteX="3dp"
        tools:layout_editor_absoluteY="189dp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Button"
        tools:layout_editor_absoluteX="226dp"
        tools:layout_editor_absoluteY="183dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Button"
        tools:layout_editor_absoluteX="119dp"
        tools:layout_editor_absoluteY="184dp" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Button"
        tools:layout_editor_absoluteX="331dp"
        tools:layout_editor_absoluteY="183dp" />

    <Button
        android:id="@+id/btn_ir_list_view"
        android:layout_width="125dp"
        android:layout_height="48dp"
        android:text="L. View"
        app:layout_constraintEnd_toEndOf="@+id/btn_ciclo_vida"
        app:layout_constraintStart_toStartOf="@+id/btn_ciclo_vida"
        tools:layout_editor_absoluteY="108dp" />

</androidx.constraintlayout.widget.ConstraintLayout>